# FactoryTestApp

./: .gitignore  ActionHintWidget.cpp  ActionHintWidget.h  AppComponent.cpp  AppComponent.h  CMakeLists.txt  CapelonTestStation.rc  ConsoleProcess.cpp  ConsoleProcess.h  Database.cpp  Database.h  Dut.h  DutButton.cpp  DutButton.h  DutInfoWidget.cpp  DutInfoWidget.h  FactoryTestApp.qrc  FactoryTestApp.rc  JLinkManager.cpp  JLinkManager.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  PrinterManager.cpp  PrinterManager.h  RailtestClient.cpp  RailtestClient.h  Session.cpp  Session.h  SessionInfoWidget.cpp  SessionInfoWidget.h  SessionManager.cpp  SessionManager.h  SlipClient.cpp  SlipClient.h  SlipProtocol.h  TestClient.cpp  TestClient.h  TestFixtureWidget.cpp  (+11 more)
CMake/: FindJLinkSDK.cmake
Docs/: Brief users guide.rtf
JLinkSDK/: GLOBAL.h  JLINKARM_Const.h  JLinkARMDLL.h  SYS.h  TYPES.h  UTIL.h  Version.h
JLinkSDK/lib/: JLink.lib  JLinkARM.lib  JLinkARM_x64.lib  JLink_x64.lib  SYS.lib  SYS_x64.lib  UTIL.lib  UTIL_x64.lib
Resources/: dut_warnig.pdn  icon.pdn
installer/: 1.iss  info_after.txt  lic.txt  third_party.txt
installer/reports/: info.txt
installer/settings_files/labels/: OLC Zhaga ECO.lab
installer/settings_files/sequences/: OlcNemaPP.js  OlcZhagaSTD.js
installer/settings_files/sequences/OlcNemaPP/: olc_nema_pp_software.hex
installer/settings_files/sequences/OlcZhagaECO/: download_railtest.jlink  final_image_olc.hex  olc_zhaga_software.hex
labels/: CapelonLabel.lab  OLC NemaPP.lab  OlcZhagaLabel.lab  test.lab
sequences/: GeneralCommands.js  OlcNema.js  OlcNemaPP.js  OlcZhagaECO.js  OlcZhagaSTD.js
sequences/OlcNema/: download.bat  download.jlink  railtest_nema.hex
sequences/OlcNemaPP/: dummy_btl_efr32xg12.s37  railtest_nema.hex
sequences/OlcZhagaECO/: download_software.jlink  olc_zhaga_2l4l_railtest.hex  olc_zhaga_railtest.jlink
